--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       "email": "srtejk@gmail.com"
     },
     {
-      "name": "srtejk@gmail.com",
+      "name": "Kiri Strack-Grose",
       "email": "kiristrackgrose@gmail.com"
     },
     {
