--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/IrreproachableCentaur/workwhere#readme",
   "dependencies": {
+    "body-parser": "^1.13.3",
     "bookshelf": "^0.8.2",
     "knex": "^0.8.6",
   "devDependencies": {
