--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
   "bugs": {
     "url": "https://github.com/IrreproachableCentaur/workwhere/issues"
   },
-  "homepage": "https://github.com/IrreproachableCentaur/workwhere#readme"
+  "homepage": "https://github.com/IrreproachableCentaur/workwhere#readme",
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "mocha": "^2.2.5"
+  }
 }
