--- a/package.json
+++ b/package.json
@@ -34,11 +34,10 @@
     "url": "https://github.com/IrreproachableCentaur/workwhere/issues"
   },
   "homepage": "https://github.com/IrreproachableCentaur/workwhere#readme",
-  "devDependencies": {
-    "pg": "^4.4.1"
-  },
   "dependencies": {
     "bookshelf": "^0.8.2",
-    "knex": "^0.8.6"
+    "knex": "^0.8.6",
+    "chai": "^3.2.0",
+    "mocha": "^2.2.5"
   }
 }
