--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
   },
   "repository": {
     "type": "git",
@@ -35,11 +35,11 @@
   },
   "homepage": "https://github.com/IrreproachableCentaur/workwhere#readme",
   "dependencies": {
+    "bluebird": "^2.9.34",
     "body-parser": "^1.13.3",
     "bookshelf": "^0.8.2",
+    "express": "^4.13.3",
     "knex": "^0.8.6",
-  "devDependencies": {
-    "chai": "^3.2.0",
-    "mocha": "^2.2.5"
+    "pg": "^4.4.1"
   }
 }
