--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bluebird": "^2.9.34",
     "body-parser": "^1.13.3",
     "bookshelf": "^0.8.2",
+    "chai-as-promised": "^5.1.0",
     "express": "^4.13.3",
     "knex": "^0.8.6",
     "pg": "^4.4.1"
