--- a/package.json
+++ b/package.json
@@ -35,13 +35,15 @@
   },
   "homepage": "https://github.com/IrreproachableCentaur/workwhere#readme",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "bluebird": "^2.9.34",
     "body-parser": "^1.13.3",
     "bookshelf": "^0.8.2",
     "chai-as-promised": "^5.1.0",
     "express": "^4.13.3",
     "knex": "^0.8.6",
-    "pg": "^4.4.1"
+    "pg": "^4.4.1",
+    "q": "^1.4.1"
   },
   "devDependencies": {
     "chai": "^3.2.0",
