--- a/client/mobile/mobileApp/package.json
+++ b/client/mobile/mobileApp/package.json
@@ -6,6 +6,8 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "react-native": "^0.10.1"
+    "react-native": "^0.10.1",
+    "react-native-search-bar": "^2.0.0",
+    "react-native-camera": "^0.3.3"
   }
 }
