--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/test/databaseTest.js server/test/serverTest.js",
+    "start": "nodemon server/server.js"
   },
   "repository": {
     "type": "git",
