--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "mocha server/test/databaseTest.js server/test/serverTest.js",
     "postinstall": "bash ./post_install.sh"
   },
+  "engines": {
+    "node": "0.10.x"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/IrreproachableCentaur/workwhere.git"
