--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/server.js",
-    "test": "mocha server/test/databaseTest.js server/test/serverTest.js",
-    "postinstall": "bash ./post_install.sh"
+    "start": "node server/server.js",
+    "test": "mocha server/test/databaseTest.js server/test/serverTest.js"
   },
   "engines": {
     "node": "^0.12.7",
