--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "mocha server/test/databaseTest.js server/test/serverTest.js"
+    "test": "mocha server/test/databaseTest.js server/test/serverTest.js",
+    "postinstall": "npm install"
   },
   "engines": {
     "node": "^0.12.7",
