--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "knex": "^0.8.6",
     "pg": "^4.4.1",
     "q": "^1.4.1",
+    "qr-image": "^3.1.0",
     "supertest": "^1.1.0"
   },
   "devDependencies": {
