--- a/client/mobile/mobileApp/package.json
+++ b/client/mobile/mobileApp/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react-native": "^0.10.1",
     "react-native-camera": "^0.3.3",
+    "react-native-icons": "^0.3.6",
     "react-native-mapbox-gl": "^0.4.1",
     "react-native-search-bar": "^2.0.0"
   }
