--- a/client/mobile/mobileApp/package.json
+++ b/client/mobile/mobileApp/package.json
@@ -10,7 +10,6 @@
     "react-native-camera": "^0.3.3",
     "react-native-icons": "^0.3.6",
     "react-native-mapbox-gl": "^0.4.1",
-    "react-native-search-bar": "^2.0.0",
-    "react-native-side-menu": "^0.13.0"
+    "react-native-search-bar": "^2.0.0"
   }
 }
